# test-upload

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  absorb_python_SPEC.md  pyproject.toml  readme.txt  requirements.txt
.cursor/rules/: project_Guidelines.mdc
.github/workflows/: ci.yml
config/: config.yaml
data/: api_note.txt  app.db  note.txt  post.json  processed_data.csv  sample_data.csv  sample_extracted.json  sample_extracted.txt
src/: api.py  chunker.py  cli.py  database.py  embedding_demo.py  json_demo.py  llm_client.py  main.py  prompt_demo.py  retriever.py  test_config.py  test_requests.py
src/core/: __init__.py  api_client.py  concurrent_demo.py  config.py  data_processor.py  file_ops.py  pdf_processor.py  text_processor.py
tests/: test_api_client.py  test_file_ops.py
week1_practice/: a2_variables.py  a3_control_flow.py  a4_functions.py  a5_containers.py  a6_file_io.py  a7_a8_practice.py
